Fixed home image on mobile; added footer; fixed mobile top3 cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,13 +40,13 @@
         display: block;
         margin: 0 auto;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         overflow: hidden;
     }
     .form-input {
         max-width: 200px;
         position: fixed;
-        top: 5%;
+        top: 15%;
         left: 25%;
         color: gray;
         display: flex;
@@ -115,7 +115,7 @@
         width: 49%;
     }
     .leaderboard-top3-card-col {
-        width: 32%;
+        width: 100%;
     }
     .leaderboard-top3-card {
         width: 100%;
@@ -365,7 +365,7 @@
         display: block;
         margin: 0 auto;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         overflow: hidden;
     }
     .form-input {
@@ -683,7 +683,7 @@
         display: block;
         margin: 0 auto;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         overflow: hidden;
     }
     .form-input {
@@ -976,18 +976,6 @@ body {
     scrollbar-width: 3px;
 }
 
-div::-webkit-scrollbar {
-    width: 0.80em;
-}
- 
-div::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
- 
-div::-webkit-scrollbar-thumb {
-  background-color: #f2a900;
-  outline: 1px solid slategrey;
-}
 table::-webkit-scrollbar {
     width: 0.40em;
 }
@@ -1015,5 +1003,18 @@ tbody::-webkit-scrollbar-thumb {
 tbody {
     scrollbar-width: 3px;
 }
-
+footer {
+    width: 100%;
+    max-width: 1920px;
+    margin: 20px 0 0 0;
+    padding: 20px;
+}
+footer p {
+    color: #f2a900;
+    margin: 0 auto;
+    font-size: 14px;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 400;
+    text-align: center;
+}
 
